--- a/style.css
+++ b/style.css
@@ -8,6 +8,8 @@ html { box-sizing: border-box; }
 body {
     margin: 0;
     font-family: 'Source Sans Pro', sans-serif;
+    color: white;
+    
 }
 
 h2 {
@@ -20,6 +22,7 @@ h2 {
     font-size: 14px;
     color: silver;
 }
+
 
 .paticka a {
     color: silver;
@@ -40,3 +43,181 @@ notebook/pc:
 */
 
 /* tvoje styly sem */
+
+
+
+.hlavni-recept{
+    background-image: url(images/burger.jpg);
+    background-repeat:no-repeat;
+    background-size: cover;
+    padding: 0.5rem;
+    min-height: 200px;
+    border-bottom: 1px white solid;
+    text-shadow: 1px 1px 2px black;
+ 
+
+}
+
+.recept-recept2{
+    background-image: url(images/sushi.jpg);
+    background-repeat:no-repeat;
+    background-size: cover;
+    padding: 0.5rem;
+    min-height: 90px;
+    border-bottom: 1px white solid;
+    text-shadow: 1px 1px 2px black;
+}
+
+.recept-recept3{
+    background-image: url(images/rajcata.jpg);
+    background-repeat:no-repeat;
+    background-size: cover;
+    padding: 0.5rem;
+    min-height: 90px;
+    border-bottom: 1px white solid;
+    text-shadow: 1px 1px 2px black;
+}
+
+.recept-recept4{
+    background-image: url(images/kure.jpg);
+    background-repeat:no-repeat;
+    background-size: cover;
+    padding: 0.5rem;
+    min-height: 90px;
+    border-bottom: 1px white solid;
+    text-shadow: 1px 1px 2px black;
+}
+
+.recept-recept5{
+    background-image: url(images/grilovani.jpg);
+    background-repeat:no-repeat;
+    background-size: cover;
+    padding: 0.5rem;
+    min-height: 90px;
+    border-bottom: 1px white solid;
+    text-shadow: 1px 1px 2px black;
+}
+
+.recept-kategorie{
+        font-family: 'Raleway', sans-serif;
+    
+}
+
+
+.recept-meta{
+        display:flex;
+        position: relative;
+        z-index:2;
+        flex-direction:row;
+        justify-content:space-between;  
+        margin-top:0;
+        font-size: 0.8rem;
+        font-weight:400;
+}
+
+.recept-nazev{
+        font-family: 'Raleway', sans-serif;
+        font-weight: 800;
+        font-size: 1.125rem;
+        position: relative;
+        z-index: 2;
+}
+ 
+.recept-hlavni,
+.recept-nazev{
+    font-size: 1,75rem;
+}
+
+/* tablet*/
+@media screen and (min-height: 250px){
+    .hlavni-recept {
+        width:100%;
+        
+    }
+    .recept-recept2{
+        float:left;
+        width:50%;
+        min-height:150px;
+        padding:1.25rem;
+    
+    }
+
+    .recept-recept3{
+        float:right;
+        width:50%;
+        min-height:150px;
+        padding:1.25rem;
+    }
+
+    .recept-recept4{
+        float:left;
+        width:50%;
+        min-height:150px;
+        padding:1.25rem;
+    
+    }
+
+    .recept-recept5{
+        float:left;
+        width:50%;
+        min-height:150px;
+        padding:1.25rem;
+    
+    }
+}
+
+/* PC*/
+@media screen and (min-height:400px){
+   
+    .hlavni-recept {
+        flex-flow: column;
+        width: 33.3%;
+        height:100%;
+        flex-grow:3;
+        
+    }
+    .recept-recept2{
+        float:left;
+        width:50%;
+        min-height:200px;
+        padding:1.25rem;
+        flex-flow:column;
+        width: 33.3%;
+        flex-grow:1;
+    
+    }
+
+    .recept-recept3{
+        float:right;
+        width:50%;
+        min-height:200px;
+        padding:1.25rem;
+        flex-flow:column;
+        width: 33.3%;
+        flex-grow:1;
+    }
+
+    .recept-recept4{
+        float:left;
+        width:50%;
+        min-height:200px;
+        padding:1.25rem;
+        flex-flow:column;
+        width: 33.3%;
+        flex-grow:1;
+    
+    }
+
+    .recept-recept5{
+        float:left;
+        width:50%;
+        min-height:200px;
+        padding:1.25rem;
+        flex-flow:column;
+        width: 33.3%;
+        flex-grow:1;
+    
+    }
+}
+
+
