--- a/style.css
+++ b/style.css
@@ -6,7 +6,6 @@ html { box-sizing: border-box; }
 /* -------------------------------------------------- */
 
 body {
-    margin: 0;
     font-family: 'Source Sans Pro', sans-serif;
     color: white;
     
@@ -45,179 +44,110 @@ notebook/pc:
 /* tvoje styly sem */
 
 
+.doporucujeme{
+    display: flex;
+    flex-direction: column-reverse;
+    justify-content: space-between;
+    background-color:#999;
+    border-bottom: white solid 1px;
+    padding: 0.5rem;
+    min-height: 90px;
+    text-shadow: 2px 2px black;
+}
+
+.recept-nazev{
+    font-size: 1.2rem;
+    
+}
+.recept-meta{
+    display:flex;
+    justify-content: space-between;
+    font-size: 0.8rem;
+    padding-left: 0;
+    margin:0;
+
+}
+
+
+.recept-komentare {
+    margin-left: auto;
+
+}
 
 .hlavni-recept{
-    background-image: url(images/burger.jpg);
-    background-repeat:no-repeat;
-    background-size: cover;
-    padding: 0.5rem;
     min-height: 200px;
-    border-bottom: 1px white solid;
-    text-shadow: 1px 1px 2px black;
- 
-
+    background-image: url(image\burger.jpg);
+    
 }
 
 .recept-recept2{
-    background-image: url(images/sushi.jpg);
-    background-repeat:no-repeat;
-    background-size: cover;
-    padding: 0.5rem;
-    min-height: 90px;
-    border-bottom: 1px white solid;
-    text-shadow: 1px 1px 2px black;
+    background-image: url(image\sushi.jpg);
 }
 
-.recept-recept3{
-    background-image: url(images/rajcata.jpg);
-    background-repeat:no-repeat;
-    background-size: cover;
-    padding: 0.5rem;
-    min-height: 90px;
-    border-bottom: 1px white solid;
-    text-shadow: 1px 1px 2px black;
+.recept-recept3 {
+    background-image: url(images\rajcata.jpg);
 }
 
 .recept-recept4{
-    background-image: url(images/kure.jpg);
-    background-repeat:no-repeat;
-    background-size: cover;
-    padding: 0.5rem;
-    min-height: 90px;
-    border-bottom: 1px white solid;
-    text-shadow: 1px 1px 2px black;
+
+background-image: url(images\kure.jpg);
 }
 
 .recept-recept5{
-    background-image: url(images/grilovani.jpg);
-    background-repeat:no-repeat;
-    background-size: cover;
-    padding: 0.5rem;
-    min-height: 90px;
-    border-bottom: 1px white solid;
-    text-shadow: 1px 1px 2px black;
-}
 
-.recept-kategorie{
-        font-family: 'Raleway', sans-serif;
-    
+    background-image: url(images\grilovani.jpg);
 }
 
 
-.recept-meta{
+@media screen and (min-widht: 480px) {
+    .doporucujeme{
         display:flex;
-        position: relative;
-        z-index:2;
-        flex-direction:row;
-        justify-content:space-between;  
-        margin-top:0;
-        font-size: 0.8rem;
-        font-weight:400;
-}
+        flex-wrap: wrap;
+        padding: 1.25rem;
+        font-size: 1.5rem;
+    }
 
-.recept-nazev{
-        font-family: 'Raleway', sans-serif;
-        font-weight: 800;
-        font-size: 1.125rem;
-        position: relative;
-        z-index: 2;
-}
- 
-.recept-hlavni,
-.recept-nazev{
-    font-size: 1,75rem;
-}
-
-/* tablet*/
-@media screen and (min-height: 250px){
-    .hlavni-recept {
+    .hlavni-recept{
         width:100%;
-        
-    }
-    .recept-recept2{
-        float:left;
-        width:50%;
-        min-height:150px;
-        padding:1.25rem;
-    
+        min-height: 250px;
     }
 
-    .recept-recept3{
-        float:right;
-        width:50%;
-        min-height:150px;
-        padding:1.25rem;
-    }
+    .sloupec{
 
-    .recept-recept4{
-        float:left;
-        width:50%;
-        min-height:150px;
-        padding:1.25rem;
-    
-    }
-
-    .recept-recept5{
-        float:left;
-        width:50%;
-        min-height:150px;
-        padding:1.25rem;
-    
+        display:flex;
+        flex-direction:column;
+        border-right: 1px white solid;
+        width: 50%;
+        min-height: 150px;
     }
 }
 
-/* PC*/
-@media screen and (min-height:400px){
-   
-    .hlavni-recept {
-        flex-flow: column;
-        width: 33.3%;
-        height:100%;
-        flex-grow:3;
-        
-    }
-    .recept-recept2{
-        float:left;
-        width:50%;
-        min-height:200px;
-        padding:1.25rem;
-        flex-flow:column;
-        width: 33.3%;
-        flex-grow:1;
-    
+@media screen and (min-widht:860px){
+    .sloupec{
+        flex-basis: calc(100%/3);
+        flex-direction: column;
     }
 
-    .recept-recept3{
-        float:right;
-        width:50%;
-        min-height:200px;
-        padding:1.25rem;
-        flex-flow:column;
-        width: 33.3%;
-        flex-grow:1;
+    .hlavni-recept{
+        min-height: 400px;
     }
 
-    .recept-recept4{
-        float:left;
-        width:50%;
-        min-height:200px;
-        padding:1.25rem;
-        flex-flow:column;
-        width: 33.3%;
-        flex-grow:1;
-    
-    }
-
+    .recept-recept2,
+    .recept-recept3,
+    .recept-recept3,
     .recept-recept5{
-        float:left;
-        width:50%;
         min-height:200px;
-        padding:1.25rem;
-        flex-flow:column;
-        width: 33.3%;
-        flex-grow:1;
-    
+    }
+
+    .recept-meta{
+        padding: 1.25rem;
+    }
+
+    .doporucujeme{
+        font-size:1.75rem;
     }
 }
+
+
 
 
